ProfileStats exists again, it's just incomplete